# cmd/api/main.go
@@ -80,6 +80,7 @@ func main() {
 	router.Post("/api/customers", handler.CreateCustomerHandler(customerService))
 	router.Put("/api/customers/{id}", handler.UpdateCustomerHandler(customerService))
 	router.Get("/api/customers/{id}", handler.GetCustomerByIdHandler(customerService))
+	router.Get("/api/customers/login", handler.GetCustomerByCPFHandler(customerService))
 
 	router.Post("/api/products", handler.CreateProductHandler(productService))
 	router.Delete("/api/products/{id}", handler.DeleteProductHandler(productService))
