# docs/swagger.json
@@ -58,6 +58,43 @@
                 }
             }
         },
+        "/api/customers/login": {
+            "get": {
+                "description": "Get customer by CPF. This Endpoint can be used as a Login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get customer by CPF",
+                "parameters": [
+                    {
+                        "description": "customerForm",
+                        "name": "customer",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CustomerForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Customer"
+                        }
+                    },
+                    "404": {
+                        "description": "Customer not found"
+                    }
+                }
+            }
+        },
         "/api/customers/{id}": {
             "get": {
                 "description": "Get customer by ID",
@@ -525,7 +562,42 @@
                 }
             }
         },
-        "/api/products/{category}": {
+        "/api/products/categories/{category}": {
+            "get": {
+                "description": "List all products by a category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "List all products by a category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Lanches",
+                        "name": "category",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.ProductResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/{id}": {
             "get": {
                 "description": "Get product by ID",
                 "consumes": [
@@ -555,9 +627,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/products/{id}": {
+            },
             "put": {
                 "description": "Update a product by ID",
                 "consumes": [
@@ -633,6 +703,17 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.CustomerForm": {
+            "type": "object",
+            "required": [
+                "cpf"
+            ],
+            "properties": {
+                "cpf": {
                     "type": "string"
                 }
             }
